<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidRTC</string>
    <string name="server_address_hint">Server address:</string>
    <string name="server_failed_to_start">Server failed to start! Trying different port…</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="stop_service">Stop service</string>
    <string name="service_stopped">Service stopped</string>
    <string name="stop_service_hint">Press "Stop Service" when finished. You will need to close and open the app again to start screen capture.</string>
    <string name="qr_code_hint">Scan QR-Code to obtain server address:</string>
</resources>
