<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:theme="@style/AppTheme"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:text="@string/server_address_hint"
            android:labelFor="@+id/textViewIp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewIp"
            android:theme="@style/AppTheme"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:text="@string/stop_service_hint"
            android:labelFor="@+id/buttonStopService"/>

        <Button
            android:id="@+id/buttonStopService"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:text="@string/stop_service"
            android:onClick="onStopServiceClick"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:text="@string/qr_code_hint"
            android:labelFor="@+id/imageViewQrCode"/>

        <ImageView
            android:id="@+id/imageViewQrCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@null" />

    </LinearLayout>
</ScrollView>
